[package]
name = "cranelift_ruby"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = "0.8"
cranelift-jit = "0.75.0"
cranelift = "0.75.0"
cranelift-module = "0.75.0"
cranelift-native = "0.75.0"
eyre = "0.6.5"
lazy_static = "1"

[lib]
name = "cranelift_ruby"
crate-type = ["cdylib"]